styles.css
body {
 height: 1360px;
 width: 100%;
 margin: 0;
 padding: 0;
 overflow: scroll;
}

.searchWindow {
  border: 2px solid black;
  width: 65%;
  position: relative;
  right: 0;
  left: 0;
  margin: 30px auto 20px auto;

}

.gameName {
  margin-left: 340px;
}

.description {
  margin-left: 340px;
}

.total {
  float: left;
}

.scroll {
  float: right;
}

.preview {
  float:left;
  margin: 5px;
}

.preview img {
  display: block;
}

.info {
  /*border: 5px solid red;*/
}

.streamDisplay {
  font-weight: bold;
  font-size: 200%;
}

.stream {
  margin: 20px;  
  /*border:5px solid #333;*/
  overflow: auto;
}

.searchInfo {
  margin: 5px 10px  5px 10px;
  clear: both;
  overflow: auto;
  /*border: 5px solid #666;*/
}

.page {
  float: right;
}

#rightArrow {
  margin: 0px 5px 0px 5px;
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 10px solid gray;
  float: right;
}

#leftArrow {
  margin: 0px 5px 0px 5px;
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent; 
  border-right:10px solid gray; 
  float: right;
}

#searchBox {
  border-bottom: 2px solid black;
  padding: 50px 30px 20px 40px;
}

#results {
  /*border: 5px solid blue;*/
}

